--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "primeflex": "^3.3.0",
+    "primevue": "^3.29.1",
     "sass": "^1.59.2",
     "sass-loader": "^13.2.0",
     "vue": "^3.2.45",
